# moustic

./: .gitignore  404.html  CONTRIBUTING.md  README.md  R_to_Py.py  all.py  analyse_test.py  app.py  callbacks.py  couleur.txt  index.html  interface.py  layout.py  mkdocs.yml  pyproject.toml  requirements.txt  save.txt  sitemap.xml  utils.py
.github/workflows/: main.yml  mkdocs.yml
doc/: index.md  install.md  install_python.md  mosquinvestigate.md  mosquitlove.md  mosquitrack.md  usage.md
install_python/: index.html
mosquinvestigate/: index.html
mosquitlove/: index.html
mosquitrack/: index.html
search/: search_index.json
src/: callbacks.py  generate_video.py  layout.py  utils.py
usage/: index.html
