[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["Tests"]

[project]
name = "moustic"
version = "1.1"
description = "This project allows us to visualize swarms of mosquitoes, detect interactions from their trajectories and provides access to some research ideas on the nature of these interactions. "
authors = [{ name = "Anaïs Denis" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
  "dash",
  "dash-bootstrap-components",
  "pandas",
  "numpy",
  "plotly",
  "matplotlib"
]

[project.scripts]
pmosquito = "app:main"
